# peakon_gui

./: .gitignore  README.md  pyproject.toml  setup.cfg  tasks.py
app/: app_text.json  constants.py  run.py  styles.py
app/db/: database.py
app/requirements/: requirements.in  requirements.txt
app/screens/: questions_screen.py  results_screen.py  welcome_screen.py
