#[tool.poetry]
#name = "omnia-prevent-mdapi"
#version = "0.1.0"
#description = "Model Metadata API Service."
#authors = ["Equinor ASA <fg_gpl@equinor.com>"]
#license = "AGPL-3.0"
#packages = [
#    { include = "app" }
#]
#
#[tool.poetry.dependencies]
#python = "^3.7"
#fastapi = "^0.48.0"
#python-decouple = "^3.3"
#uvicorn = "^0.11.3"
#pugsql = "^0.1.18"
#psycopg2 = "^2.8.4"
#poetry = "^1.0.5"
#sqlalchemy = "^1.3.14"
#attrs = "^19.3.0"
#
#[tool.poetry.dev-dependencies]
#invoke = "^1.4.1"
#pytest = "^5.3"
#pytest-cov = "^2.8"
#black = {version = "^19.10-alpha.0", allow-prereleases = true}
#wemake-python-styleguide = "^0.12.5"
#safety = "^1.8"
#pre-commit = "^2.1.1"
#mypy = "^0.761"
#factory_boy = "^2.12.0"
#
#[tool.poetry.scripts]
#migration = 'app.db.migration:migrate_db'

[tool.isort]
line_length = 120
skip = [".cache", ".venv"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.cache
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
#
#[build-system]
#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"
